<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SandboxedApp</string>
    <string name="action_settings">Settings</string>
    <string name="title">Make request</string>
    <string name="requestLocationButton">Request Location</string>
    <string name="requestProfileButton">Request Profile</string>
    <string name="requestIMEIButton">Request IMEI</string>
    <string name="requestCarrierButton">Request Carrier</string>
    <string name="requestContactsButton">Request Contacts</string>
    
</resources>
